--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ title: 'Home'
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3840"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3248"/>
     <style>
       ._logo,
       ._nav { display:none !important }
+      ._footer { margin-top:1rem !important }
       h1.hero { font-family: 'Arial',system-ui,sans-serif }
+      article .projects { padding-left: 0;list-style: inside }
     </style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -34,9 +36,81 @@ title: 'Home'
             <main class="_main">
               <article class="_article _layout">
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
+                <nav>
+                  <p><b>Home</b>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/md">Markdown</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/test">Test</a>
+                  </p>
+                </nav>
+                <hr class="thin border-gray-light"/>
+                <nav>
+                  <ul class="projects">
+                    <li><b>Core</b>
+<i class="_icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i>
+
+<a href="/dove/core/preview.html">Preview</a>
+<a href="/dove/core/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/core/">Home</a>
+<a href="/dove/core/page.html">Page</a>
+<a href="/dove/core/404.html">404</a>
+                    </li>
+                    <li><b>Mallet</b>
+<i class="_icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i>
+
+<a href="/dove/mallet/preview.html">Preview</a>
+<a href="/dove/mallet/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/mallet/">Home</a>
+<a href="/dove/mallet/page.html">Page</a>
+<a href="/dove/mallet/404.html">404</a>
+                    </li>
+                    <li><b>Nova</b>
+<i class="_icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i>
+
+<a href="/dove/nova/preview.html">Preview</a>
+<a href="/dove/nova/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/nova/">Home</a>
+<a href="/dove/nova/page.html">Page</a>
+<a href="/dove/nova/404.html">404</a>
+                    </li>
+                    <li><b>Prime</b>
+<i class="_icon"><i class="isvg">
+                          <svg viewBox="0 0 24 24">
+                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                          </svg></i></i>
+
+<a href="/dove/prime/preview.html">Preview</a>
+<a href="/dove/prime/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
+                    </li>
+                  </ul>
+                </nav>
+                <hr class="thin border-gray-light"/>
                 <pre class="scrollable highlight" style="max-height:213px"><b class="text-gray"># _config.pug</b>
 version      : 0.0.3
-revision     : 2511.03.3840
+revision     : 2511.03.3248
 title        : Dove
 description  : Dove is a theme development project.
 author       : Techie Joe
@@ -53,78 +127,19 @@ google_analytics     : (undefined)
 cloudflare_analytics : (undefined)
 
 source_url   : https://github.com/techie-joe/dove</pre>
+                <hr class="thin border-gray-light"/>
                 <nav>
                   <p><b>Dove</b>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/md">Markdown</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/test">Test</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
+<i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i>
 
 <a href="https://github.com/techie-joe/dove" target="_edit">Repository</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="https://techie-joe.github.io/proto" target="_test">Proto</a>
                   </p>
-                </nav>
-                <hr class="thin border-gray-light"/>
-                <nav>
-                  <ul>
-                    <li><b>Core</b>
-<i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
-<a href="/dove/core/preview.html">Preview</a>
-<a href="/dove/core/legacy.html">Legacy</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/core/">Home</a>
-<a href="/dove/core/page.html">Page</a>
-<a href="/dove/core/404.html">404</a>
-                    </li>
-                    <li><b>Mallet</b>
-<i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
-<a href="/dove/mallet/preview.html">Preview</a>
-<a href="/dove/mallet/legacy.html">Legacy</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/mallet/">Home</a>
-<a href="/dove/mallet/page.html">Page</a>
-<a href="/dove/mallet/404.html">404</a>
-                    </li>
-                    <li><b>Nova</b>
-<i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
-<a href="/dove/nova/preview.html">Preview</a>
-<a href="/dove/nova/legacy.html">Legacy</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/nova/">Home</a>
-<a href="/dove/nova/page.html">Page</a>
-<a href="/dove/nova/404.html">404</a>
-                    </li>
-                    <li><b>Prime</b>
-<i class="_icon"><i class="isvg">
-                          <svg viewBox="0 0 24 24">
-                            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                          </svg></i></i>
-<a href="/dove/prime/preview.html">Preview</a>
-<a href="/dove/prime/legacy.html">Legacy</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/prime/">Home</a>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
-                    </li>
-                  </ul>
                 </nav>
               </article>
             </main>
@@ -136,6 +151,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
+
 <a href="https://techie-joe.github.io">Website</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
@@ -165,7 +181,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3840"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3248"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
